pp4/y.output
Terminals unused in grammar

   T_Dims


语法

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VariableDecl
    5     | FunctionDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VariableDecl: Variable ';'

    9 Variable: Type ident

   10 Type: T_Int
   11     | T_Double
   12     | T_Bool
   13     | T_String
   14     | ident
   15     | Type T_NewArray

   16 FunctionDecl: Type ident '(' Formals ')' StmtBlock
   17             | T_Void ident '(' Formals ')' StmtBlock

   18 Formals: VariableList
   19        | %empty

   20 ClassDecl: T_Class ident '{' FieldList '}'
   21          | T_Class ident '{' '}'
   22          | T_Class ident T_Implements NamedTypeList '{' FieldList '}'
   23          | T_Class ident T_Implements NamedTypeList '{' '}'
   24          | T_Class ident T_Extends NamedType '{' FieldList '}'
   25          | T_Class ident T_Extends NamedType '{' '}'
   26          | T_Class ident T_Extends NamedType T_Implements NamedTypeList '{' FieldList '}'
   27          | T_Class ident T_Extends NamedType T_Implements NamedTypeList '{' '}'

   28 Field: VariableDecl
   29      | FunctionDecl

   30 InterfaceDecl: T_Interface ident '{' PrototypeList '}'
   31              | T_Interface ident '{' '}'

   32 Prototype: Type ident '(' Formals ')' ';'
   33          | T_Void ident '(' Formals ')' ';'

   34 StmtBlock: '{' '}'
   35          | '{' StmtList '}'
   36          | '{' VariableDeclList '}'
   37          | '{' VariableDeclList StmtList '}'

   38 Stmt: EmptyExpr ';'
   39     | Expr ';'
   40     | IfStmt
   41     | WhileStmt
   42     | ForStmt
   43     | BreakStmt
   44     | ReturnStmt
   45     | PrintStmt
   46     | StmtBlock

   47 IfStmt: T_If '(' Expr ')' Stmt T_Else Stmt
   48       | T_If '(' Expr ')' Stmt

   49 WhileStmt: T_While '(' Expr ')' Stmt

   50 ForStmt: T_For '(' Expr ';' Expr ';' Expr ')' Stmt
   51        | T_For '(' Expr ';' Expr ';' EmptyExpr ')' Stmt
   52        | T_For '(' EmptyExpr ';' Expr ';' Expr ')' Stmt
   53        | T_For '(' EmptyExpr ';' Expr ';' EmptyExpr ')' Stmt

   54 ReturnStmt: T_Return Expr ';'
   55           | T_Return EmptyExpr ';'

   56 BreakStmt: T_Break ';'

   57 PrintStmt: T_Print '(' ExprList ')' ';'

   58 Call: ident '(' Actuals ')'
   59     | Expr '.' ident '(' Actuals ')'

   60 LValue: ident
   61       | Expr '.' ident
   62       | Expr '[' Expr ']'

   63 Expr: LValue '=' Expr
   64     | Constant
   65     | LValue
   66     | T_This
   67     | Call
   68     | '(' Expr ')'
   69     | Expr '+' Expr
   70     | Expr '-' Expr
   71     | Expr '*' Expr
   72     | Expr '/' Expr
   73     | Expr '%' Expr
   74     | '-' Expr
   75     | Expr '<' Expr
   76     | Expr T_LessEqual Expr
   77     | Expr '>' Expr
   78     | Expr T_GreaterEqual Expr
   79     | Expr T_Equal Expr
   80     | Expr T_NotEqual Expr
   81     | Expr T_And Expr
   82     | Expr T_Or Expr
   83     | '!' Expr
   84     | T_ReadInteger '(' ')'
   85     | T_ReadLine '(' ')'
   86     | T_New NamedType
   87     | T_NewArray '(' Expr ',' Type ')'

   88 Actuals: ExprList
   89        | %empty

   90 Constant: intConstant
   91         | doubleConstant
   92         | boolConstant
   93         | stringConstant
   94         | nullConstant

   95 intConstant: T_IntConstant

   96 doubleConstant: T_DoubleConstant

   97 boolConstant: T_BoolConstant

   98 stringConstant: T_StringConstant

   99 nullConstant: T_Null

  100 ident: T_Identifier

  101 ExprList: Expr
  102         | ExprList ',' Expr

  103 VariableList: Variable
  104             | VariableList ',' Variable

  105 NamedTypeList: NamedType
  106              | NamedTypeList ',' NamedType

  107 NamedType: ident

  108 PrototypeList: Prototype
  109              | PrototypeList Prototype

  110 StmtList: Stmt
  111         | StmtList Stmt

  112 FieldList: Field
  113          | FieldList Field

  114 VariableDeclList: VariableDecl
  115                 | VariableDeclList VariableDecl

  116 EmptyExpr: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 83
'%' (37) 73
'(' (40) 16 17 32 33 47 48 49 50 51 52 53 57 58 59 68 84 85 87
')' (41) 16 17 32 33 47 48 49 50 51 52 53 57 58 59 68 84 85 87
'*' (42) 71
'+' (43) 69
',' (44) 87 102 104 106
'-' (45) 70 74
'.' (46) 59 61
'/' (47) 72
';' (59) 8 32 33 38 39 50 51 52 53 54 55 56 57
'<' (60) 75
'=' (61) 63
'>' (62) 77
'[' (91) 62
']' (93) 62
'{' (123) 20 21 22 23 24 25 26 27 30 31 34 35 36 37
'}' (125) 20 21 22 23 24 25 26 27 30 31 34 35 36 37
error (256)
T_Void (258) 17 33
T_Bool (259) 12
T_Int (260) 10
T_Double (261) 11
T_String (262) 13
T_Class (263) 20 21 22 23 24 25 26 27
T_LessEqual (264) 76
T_GreaterEqual (265) 78
T_Equal (266) 79
T_NotEqual (267) 80
T_Dims (268)
T_And (269) 81
T_Or (270) 82
T_Null (271) 99
T_Extends (272) 24 25 26 27
T_This (273) 66
T_Interface (274) 30 31
T_Implements (275) 22 23 26 27
T_While (276) 49
T_For (277) 50 51 52 53
T_If (278) 47 48
T_Else (279) 47
T_Return (280) 54 55
T_Break (281) 56
T_New (282) 86
T_NewArray (283) 15 87
T_Print (284) 57
T_ReadInteger (285) 84
T_ReadLine (286) 85
T_Identifier (287) 100
T_StringConstant (288) 98
T_IntConstant (289) 95
T_DoubleConstant (290) 96
T_BoolConstant (291) 97
UMINUS (292)
T_Lower_Than_Else (293)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
Program (58)
    on left: 1, on right: 0
DeclList (59)
    on left: 2 3, on right: 1 2
Decl (60)
    on left: 4 5 6 7, on right: 2 3
VariableDecl (61)
    on left: 8, on right: 4 28 114 115
Variable (62)
    on left: 9, on right: 8 103 104
Type (63)
    on left: 10 11 12 13 14 15, on right: 9 15 16 32 87
FunctionDecl (64)
    on left: 16 17, on right: 5 29
Formals (65)
    on left: 18 19, on right: 16 17 32 33
ClassDecl (66)
    on left: 20 21 22 23 24 25 26 27, on right: 6
Field (67)
    on left: 28 29, on right: 112 113
InterfaceDecl (68)
    on left: 30 31, on right: 7
Prototype (69)
    on left: 32 33, on right: 108 109
StmtBlock (70)
    on left: 34 35 36 37, on right: 16 17 46
Stmt (71)
    on left: 38 39 40 41 42 43 44 45 46, on right: 47 48 49 50 51 52
    53 110 111
IfStmt (72)
    on left: 47 48, on right: 40
WhileStmt (73)
    on left: 49, on right: 41
ForStmt (74)
    on left: 50 51 52 53, on right: 42
ReturnStmt (75)
    on left: 54 55, on right: 44
BreakStmt (76)
    on left: 56, on right: 43
PrintStmt (77)
    on left: 57, on right: 45
Call (78)
    on left: 58 59, on right: 67
LValue (79)
    on left: 60 61 62, on right: 63 65
Expr (80)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80
    81 82 83 84 85 86 87, on right: 39 47 48 49 50 51 52 53 54 59 61
    62 63 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 87 101 102
Actuals (81)
    on left: 88 89, on right: 58 59
Constant (82)
    on left: 90 91 92 93 94, on right: 64
intConstant (83)
    on left: 95, on right: 90
doubleConstant (84)
    on left: 96, on right: 91
boolConstant (85)
    on left: 97, on right: 92
stringConstant (86)
    on left: 98, on right: 93
nullConstant (87)
    on left: 99, on right: 94
ident (88)
    on left: 100, on right: 9 14 16 17 20 21 22 23 24 25 26 27 30 31
    32 33 58 59 60 61 107
ExprList (89)
    on left: 101 102, on right: 57 88 102
VariableList (90)
    on left: 103 104, on right: 18 104
NamedTypeList (91)
    on left: 105 106, on right: 22 23 26 27 106
NamedType (92)
    on left: 107, on right: 24 25 26 27 86 105 106
PrototypeList (93)
    on left: 108 109, on right: 30 109
StmtList (94)
    on left: 110 111, on right: 35 37 111
FieldList (95)
    on left: 112 113, on right: 20 22 24 26 113
VariableDeclList (96)
    on left: 114 115, on right: 36 37 115
EmptyExpr (97)
    on left: 116, on right: 38 51 52 53 55


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        转到状态 9
    DeclList       转到状态 10
    Decl           转到状态 11
    VariableDecl   转到状态 12
    Variable       转到状态 13
    Type           转到状态 14
    FunctionDecl   转到状态 15
    ClassDecl      转到状态 16
    InterfaceDecl  转到状态 17
    ident          转到状态 18


State 1

   17 FunctionDecl: T_Void . ident '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 8

    ident  转到状态 19


State 2

   12 Type: T_Bool .

    $default  reduce using rule 12 (Type)


State 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


State 4

   11 Type: T_Double .

    $default  reduce using rule 11 (Type)


State 5

   13 Type: T_String .

    $default  reduce using rule 13 (Type)


State 6

   20 ClassDecl: T_Class . ident '{' FieldList '}'
   21          | T_Class . ident '{' '}'
   22          | T_Class . ident T_Implements NamedTypeList '{' FieldList '}'
   23          | T_Class . ident T_Implements NamedTypeList '{' '}'
   24          | T_Class . ident T_Extends NamedType '{' FieldList '}'
   25          | T_Class . ident T_Extends NamedType '{' '}'
   26          | T_Class . ident T_Extends NamedType T_Implements NamedTypeList '{' FieldList '}'
   27          | T_Class . ident T_Extends NamedType T_Implements NamedTypeList '{' '}'

    T_Identifier  shift, and go to state 8

    ident  转到状态 20


State 7

   30 InterfaceDecl: T_Interface . ident '{' PrototypeList '}'
   31              | T_Interface . ident '{' '}'

    T_Identifier  shift, and go to state 8

    ident  转到状态 21


State 8

  100 ident: T_Identifier .

    $default  reduce using rule 100 (ident)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           转到状态 23
    VariableDecl   转到状态 12
    Variable       转到状态 13
    Type           转到状态 14
    FunctionDecl   转到状态 15
    ClassDecl      转到状态 16
    InterfaceDecl  转到状态 17
    ident          转到状态 18


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VariableDecl .

    $default  reduce using rule 4 (Decl)


State 13

    8 VariableDecl: Variable . ';'

    ';'  shift, and go to state 24


State 14

    9 Variable: Type . ident
   15 Type: Type . T_NewArray
   16 FunctionDecl: Type . ident '(' Formals ')' StmtBlock

    T_NewArray    shift, and go to state 25
    T_Identifier  shift, and go to state 8

    ident  转到状态 26


State 15

    5 Decl: FunctionDecl .

    $default  reduce using rule 5 (Decl)


State 16

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 17

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


State 18

   14 Type: ident .

    $default  reduce using rule 14 (Type)


State 19

   17 FunctionDecl: T_Void ident . '(' Formals ')' StmtBlock

    '('  shift, and go to state 27


State 20

   20 ClassDecl: T_Class ident . '{' FieldList '}'
   21          | T_Class ident . '{' '}'
   22          | T_Class ident . T_Implements NamedTypeList '{' FieldList '}'
   23          | T_Class ident . T_Implements NamedTypeList '{' '}'
   24          | T_Class ident . T_Extends NamedType '{' FieldList '}'
   25          | T_Class ident . T_Extends NamedType '{' '}'
   26          | T_Class ident . T_Extends NamedType T_Implements NamedTypeList '{' FieldList '}'
   27          | T_Class ident . T_Extends NamedType T_Implements NamedTypeList '{' '}'

    T_Extends     shift, and go to state 28
    T_Implements  shift, and go to state 29
    '{'           shift, and go to state 30


State 21

   30 InterfaceDecl: T_Interface ident . '{' PrototypeList '}'
   31              | T_Interface ident . '{' '}'

    '{'  shift, and go to state 31


State 22

    0 $accept: Program $end .

    $default  接受


State 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 24

    8 VariableDecl: Variable ';' .

    $default  reduce using rule 8 (VariableDecl)


State 25

   15 Type: Type T_NewArray .

    $default  reduce using rule 15 (Type)


State 26

    9 Variable: Type ident .
   16 FunctionDecl: Type ident . '(' Formals ')' StmtBlock

    '('  shift, and go to state 32

    $default  reduce using rule 9 (Variable)


State 27

   17 FunctionDecl: T_Void ident '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable      转到状态 33
    Type          转到状态 34
    Formals       转到状态 35
    ident         转到状态 18
    VariableList  转到状态 36


State 28

   24 ClassDecl: T_Class ident T_Extends . NamedType '{' FieldList '}'
   25          | T_Class ident T_Extends . NamedType '{' '}'
   26          | T_Class ident T_Extends . NamedType T_Implements NamedTypeList '{' FieldList '}'
   27          | T_Class ident T_Extends . NamedType T_Implements NamedTypeList '{' '}'

    T_Identifier  shift, and go to state 8

    ident      转到状态 37
    NamedType  转到状态 38


State 29

   22 ClassDecl: T_Class ident T_Implements . NamedTypeList '{' FieldList '}'
   23          | T_Class ident T_Implements . NamedTypeList '{' '}'

    T_Identifier  shift, and go to state 8

    ident          转到状态 37
    NamedTypeList  转到状态 39
    NamedType      转到状态 40


State 30

   20 ClassDecl: T_Class ident '{' . FieldList '}'
   21          | T_Class ident '{' . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 41

    VariableDecl  转到状态 42
    Variable      转到状态 13
    Type          转到状态 14
    FunctionDecl  转到状态 43
    Field         转到状态 44
    ident         转到状态 18
    FieldList     转到状态 45


State 31

   30 InterfaceDecl: T_Interface ident '{' . PrototypeList '}'
   31              | T_Interface ident '{' . '}'

    T_Void        shift, and go to state 46
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 47

    Type           转到状态 48
    Prototype      转到状态 49
    ident          转到状态 18
    PrototypeList  转到状态 50


State 32

   16 FunctionDecl: Type ident '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable      转到状态 33
    Type          转到状态 34
    Formals       转到状态 51
    ident         转到状态 18
    VariableList  转到状态 36


State 33

  103 VariableList: Variable .

    $default  reduce using rule 103 (VariableList)


State 34

    9 Variable: Type . ident
   15 Type: Type . T_NewArray

    T_NewArray    shift, and go to state 25
    T_Identifier  shift, and go to state 8

    ident  转到状态 52


State 35

   17 FunctionDecl: T_Void ident '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 53


State 36

   18 Formals: VariableList .
  104 VariableList: VariableList . ',' Variable

    ','  shift, and go to state 54

    $default  reduce using rule 18 (Formals)


State 37

  107 NamedType: ident .

    $default  reduce using rule 107 (NamedType)


State 38

   24 ClassDecl: T_Class ident T_Extends NamedType . '{' FieldList '}'
   25          | T_Class ident T_Extends NamedType . '{' '}'
   26          | T_Class ident T_Extends NamedType . T_Implements NamedTypeList '{' FieldList '}'
   27          | T_Class ident T_Extends NamedType . T_Implements NamedTypeList '{' '}'

    T_Implements  shift, and go to state 55
    '{'           shift, and go to state 56


State 39

   22 ClassDecl: T_Class ident T_Implements NamedTypeList . '{' FieldList '}'
   23          | T_Class ident T_Implements NamedTypeList . '{' '}'
  106 NamedTypeList: NamedTypeList . ',' NamedType

    '{'  shift, and go to state 57
    ','  shift, and go to state 58


State 40

  105 NamedTypeList: NamedType .

    $default  reduce using rule 105 (NamedTypeList)


State 41

   21 ClassDecl: T_Class ident '{' '}' .

    $default  reduce using rule 21 (ClassDecl)


State 42

   28 Field: VariableDecl .

    $default  reduce using rule 28 (Field)


State 43

   29 Field: FunctionDecl .

    $default  reduce using rule 29 (Field)


State 44

  112 FieldList: Field .

    $default  reduce using rule 112 (FieldList)


State 45

   20 ClassDecl: T_Class ident '{' FieldList . '}'
  113 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 59

    VariableDecl  转到状态 42
    Variable      转到状态 13
    Type          转到状态 14
    FunctionDecl  转到状态 43
    Field         转到状态 60
    ident         转到状态 18


State 46

   33 Prototype: T_Void . ident '(' Formals ')' ';'

    T_Identifier  shift, and go to state 8

    ident  转到状态 61


State 47

   31 InterfaceDecl: T_Interface ident '{' '}' .

    $default  reduce using rule 31 (InterfaceDecl)


State 48

   15 Type: Type . T_NewArray
   32 Prototype: Type . ident '(' Formals ')' ';'

    T_NewArray    shift, and go to state 25
    T_Identifier  shift, and go to state 8

    ident  转到状态 62


State 49

  108 PrototypeList: Prototype .

    $default  reduce using rule 108 (PrototypeList)


State 50

   30 InterfaceDecl: T_Interface ident '{' PrototypeList . '}'
  109 PrototypeList: PrototypeList . Prototype

    T_Void        shift, and go to state 46
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 63

    Type       转到状态 48
    Prototype  转到状态 64
    ident      转到状态 18


State 51

   16 FunctionDecl: Type ident '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 65


State 52

    9 Variable: Type ident .

    $default  reduce using rule 9 (Variable)


State 53

   17 FunctionDecl: T_Void ident '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 66

    StmtBlock  转到状态 67


State 54

  104 VariableList: VariableList ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable  转到状态 68
    Type      转到状态 34
    ident     转到状态 18


State 55

   26 ClassDecl: T_Class ident T_Extends NamedType T_Implements . NamedTypeList '{' FieldList '}'
   27          | T_Class ident T_Extends NamedType T_Implements . NamedTypeList '{' '}'

    T_Identifier  shift, and go to state 8

    ident          转到状态 37
    NamedTypeList  转到状态 69
    NamedType      转到状态 40


State 56

   24 ClassDecl: T_Class ident T_Extends NamedType '{' . FieldList '}'
   25          | T_Class ident T_Extends NamedType '{' . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 70

    VariableDecl  转到状态 42
    Variable      转到状态 13
    Type          转到状态 14
    FunctionDecl  转到状态 43
    Field         转到状态 44
    ident         转到状态 18
    FieldList     转到状态 71


State 57

   22 ClassDecl: T_Class ident T_Implements NamedTypeList '{' . FieldList '}'
   23          | T_Class ident T_Implements NamedTypeList '{' . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 72

    VariableDecl  转到状态 42
    Variable      转到状态 13
    Type          转到状态 14
    FunctionDecl  转到状态 43
    Field         转到状态 44
    ident         转到状态 18
    FieldList     转到状态 73


State 58

  106 NamedTypeList: NamedTypeList ',' . NamedType

    T_Identifier  shift, and go to state 8

    ident      转到状态 37
    NamedType  转到状态 74


State 59

   20 ClassDecl: T_Class ident '{' FieldList '}' .

    $default  reduce using rule 20 (ClassDecl)


State 60

  113 FieldList: FieldList Field .

    $default  reduce using rule 113 (FieldList)


State 61

   33 Prototype: T_Void ident . '(' Formals ')' ';'

    '('  shift, and go to state 75


State 62

   32 Prototype: Type ident . '(' Formals ')' ';'

    '('  shift, and go to state 76


State 63

   30 InterfaceDecl: T_Interface ident '{' PrototypeList '}' .

    $default  reduce using rule 30 (InterfaceDecl)


State 64

  109 PrototypeList: PrototypeList Prototype .

    $default  reduce using rule 109 (PrototypeList)


State 65

   16 FunctionDecl: Type ident '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 66

    StmtBlock  转到状态 77


State 66

   34 StmtBlock: '{' . '}'
   35          | '{' . StmtList '}'
   36          | '{' . VariableDeclList '}'
   37          | '{' . VariableDeclList StmtList '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 78
    T_This            shift, and go to state 79
    T_While           shift, and go to state 80
    T_For             shift, and go to state 81
    T_If              shift, and go to state 82
    T_Return          shift, and go to state 83
    T_Break           shift, and go to state 84
    T_New             shift, and go to state 85
    T_NewArray        shift, and go to state 86
    T_Print           shift, and go to state 87
    T_ReadInteger     shift, and go to state 88
    T_ReadLine        shift, and go to state 89
    T_Identifier      shift, and go to state 8
    T_StringConstant  shift, and go to state 90
    T_IntConstant     shift, and go to state 91
    T_DoubleConstant  shift, and go to state 92
    T_BoolConstant    shift, and go to state 93
    '-'               shift, and go to state 94
    '!'               shift, and go to state 95
    '('               shift, and go to state 96
    '{'               shift, and go to state 66
    '}'               shift, and go to state 97

    $default  reduce using rule 116 (EmptyExpr)

    VariableDecl      转到状态 98
    Variable          转到状态 13
    Type              转到状态 34
    StmtBlock         转到状态 99
    Stmt              转到状态 100
    IfStmt            转到状态 101
    WhileStmt         转到状态 102
    ForStmt           转到状态 103
    ReturnStmt        转到状态 104
    BreakStmt         转到状态 105
    PrintStmt         转到状态 106
    Call              转到状态 107
    LValue            转到状态 108
    Expr              转到状态 109
    Constant          转到状态 110
    intConstant       转到状态 111
    doubleConstant    转到状态 112
    boolConstant      转到状态 113
    stringConstant    转到状态 114
    nullConstant      转到状态 115
    ident             转到状态 116
    StmtList          转到状态 117
    VariableDeclList  转到状态 118
    EmptyExpr         转到状态 119


State 67

   17 FunctionDecl: T_Void ident '(' Formals ')' StmtBlock .

    $default  reduce using rule 17 (FunctionDecl)


State 68

  104 VariableList: VariableList ',' Variable .

    $default  reduce using rule 104 (VariableList)


State 69

   26 ClassDecl: T_Class ident T_Extends NamedType T_Implements NamedTypeList . '{' FieldList '}'
   27          | T_Class ident T_Extends NamedType T_Implements NamedTypeList . '{' '}'
  106 NamedTypeList: NamedTypeList . ',' NamedType

    '{'  shift, and go to state 120
    ','  shift, and go to state 58


State 70

   25 ClassDecl: T_Class ident T_Extends NamedType '{' '}' .

    $default  reduce using rule 25 (ClassDecl)


State 71

   24 ClassDecl: T_Class ident T_Extends NamedType '{' FieldList . '}'
  113 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 121

    VariableDecl  转到状态 42
    Variable      转到状态 13
    Type          转到状态 14
    FunctionDecl  转到状态 43
    Field         转到状态 60
    ident         转到状态 18


State 72

   23 ClassDecl: T_Class ident T_Implements NamedTypeList '{' '}' .

    $default  reduce using rule 23 (ClassDecl)


State 73

   22 ClassDecl: T_Class ident T_Implements NamedTypeList '{' FieldList . '}'
  113 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 122

    VariableDecl  转到状态 42
    Variable      转到状态 13
    Type          转到状态 14
    FunctionDecl  转到状态 43
    Field         转到状态 60
    ident         转到状态 18


State 74

  106 NamedTypeList: NamedTypeList ',' NamedType .

    $default  reduce using rule 106 (NamedTypeList)


State 75

   33 Prototype: T_Void ident '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable      转到状态 33
    Type          转到状态 34
    Formals       转到状态 123
    ident         转到状态 18
    VariableList  转到状态 36


State 76

   32 Prototype: Type ident '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 19 (Formals)

    Variable      转到状态 33
    Type          转到状态 34
    Formals       转到状态 124
    ident         转到状态 18
    VariableList  转到状态 36


State 77

   16 FunctionDecl: Type ident '(' Formals ')' StmtBlock .

    $default  reduce using rule 16 (FunctionDecl)


State 78

   99 nullConstant: T_Null .

    $default  reduce using rule 99 (nullConstant)


State 79

   66 Expr: T_This .

    $default  reduce using rule 66 (Expr)


State 80

   49 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 125


State 81

   50 ForStmt: T_For . '(' Expr ';' Expr ';' Expr ')' Stmt
   51        | T_For . '(' Expr ';' Expr ';' EmptyExpr ')' Stmt
   52        | T_For . '(' EmptyExpr ';' Expr ';' Expr ')' Stmt
   53        | T_For . '(' EmptyExpr ';' Expr ';' EmptyExpr ')' Stmt

    '('  shift, and go to state 126


State 82

   47 IfStmt: T_If . '(' Expr ')' Stmt T_Else Stmt
   48       | T_If . '(' Expr ')' Stmt

    '('  shift, and go to state 127


State 83

   54 ReturnStmt: T_Return . Expr ';'
   55           | T_Return . EmptyExpr ';'

    T_Null            shift, and go to state 78
    T_This            shift, and go to state 79
    T_New             shift, and go to state 85
    T_NewArray        shift, and go to state 86
    T_ReadInteger     shift, and go to state 88
    T_ReadLine        shift, and go to state 89
    T_Identifier      shift, and go to state 8
    T_StringConstant  shift, and go to state 90
    T_IntConstant     shift, and go to state 91
    T_DoubleConstant  shift, and go to state 92
    T_BoolConstant    shift, and go to state 93
    '-'               shift, and go to state 94
    '!'               shift, and go to state 95
    '('               shift, and go to state 96

    $default  reduce using rule 116 (EmptyExpr)

    Call            转到状态 107
    LValue          转到状态 108
    Expr            转到状态 128
    Constant        转到状态 110
    intConstant     转到状态 111
    doubleConstant  转到状态 112
    boolConstant    转到状态 113
    stringConstant  转到状态 114
    nullConstant    转到状态 115
    ident           转到状态 129
    EmptyExpr       转到状态 130


State 84

   56 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 131


State 85

   86 Expr: T_New . NamedType

    T_Identifier  shift, and go to state 8

    ident      转到状态 37
    NamedType  转到状态 132


State 86

   87 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 133


State 87

   57 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 134


State 88

   84 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 135


State 89

   85 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 136


State 90

   98 stringConstant: T_StringConstant .

    $default  reduce using rule 98 (stringConstant)


State 91

   95 intConstant: T_IntConstant .

    $default  reduce using rule 95 (intConstant)


State 92

   96 doubleConstant: T_DoubleConstant .

    $default  reduce using rule 96 (doubleConstant)


State 93

   97 boolConstant: T_BoolConstant .

    $default  reduce using rule 97 (boolConstant)


State 94

   74 Expr: '-' . Expr

    T_Null            shift, and go to state 78
    T_This            shift, and go to state 79
    T_New             shift, and go to state 85
    T_NewArray        shift, and go to state 86
    T_ReadInteger     shift, and go to state 88
    T_ReadLine        shift, and go to state 89
    T_Identifier      shift, and go to state 8
    T_StringConstant  shift, and go to state 90
    T_IntConstant     shift, and go to state 91
    T_DoubleConstant  shift, and go to state 92
    T_BoolConstant    shift, and go to state 93
    '-'               shift, and go to state 94
    '!'               shift, and go to state 95
    '('               shift, and go to state 96

    Call            转到状态 107
    LValue          转到状态 108
    Expr            转到状态 137
    Constant        转到状态 110
    intConstant     转到状态 111
    doubleConstant  转到状态 112
    boolConstant    转到状态 113
    stringConstant  转到状态 114
    nullConstant    转到状态 115
    ident           转到状态 129


State 95

   83 Expr: '!' . Expr

    T_Null            shift, and go to state 78
    T_This            shift, and go to state 79
    T_New             shift, and go to state 85
    T_NewArray        shift, and go to state 86
    T_ReadInteger     shift, and go to state 88
    T_ReadLine        shift, and go to state 89
    T_Identifier      shift, and go to state 8
    T_StringConstant  shift, and go to state 90
    T_IntConstant     shift, and go to state 91
    T_DoubleConstant  shift, and go to state 92
    T_BoolConstant    shift, and go to state 93
    '-'               shift, and go to state 94
    '!'               shift, and go to state 95
    '('               shift, and go to state 96

    Call            转到状态 107
    LValue          转到状态 108
    Expr            转到状态 138
    Constant        转到状态 110
    intConstant     转到状态 111
    doubleConstant  转到状态 112
    boolConstant    转到状态 113
    stringConstant  转到状态 114
    nullConstant    转到状态 115
    ident           转到状态 129


State 96

   68 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 78
    T_This            shift, and go to state 79
    T_New             shift, and go to state 85
    T_NewArray        shift, and go to state 86
    T_ReadInteger     shift, and go to state 88
    T_ReadLine        shift, and go to state 89
    T_Identifier      shift, and go to state 8
    T_StringConstant  shift, and go to state 90
    T_IntConstant     shift, and go to state 91
    T_DoubleConstant  shift, and go to state 92
    T_BoolConstant    shift, and go to state 93
    '-'               shift, and go to state 94
    '!'               shift, and go to state 95
    '('               shift, and go to state 96
